syntax = "proto3";

package LoginPackage;

service LoginService {
    rpc login(LoginRequest) returns (LoginResponse) {}
    rpc register(RegisterRequest) returns (RegisterResponse) {}
}

message LoginRequest {
    string username = 1;
    string password = 2;
}

message LoginResponse {
    bool isLoggedIn = 1;
    string uuid = 2;
}

message RegisterRequest {
    string username = 1;
    string password = 2;
    string email = 3;
}

message DeleteResponse {
    enum Status {
        OK = 0;
        NO_USER = 1;
    }
    Status status = 1;
}

message RegisterResponse {
    enum Status {
        OK = 0;
        ERROR = 1;
        USER_EXISTS = 2;
    }
    Status status = 1;
    string message = 2;
}